﻿Change Log
==========

1.0.7
-----

Changed
- Bug Fixes

1.0.6
-----

Changed
- Bug Fixes
 - Fix bug in overly strict SPARQL Results JSON parsing (CORE-419)
 - Fix bug with incorrect sub-query evaluation (CORE-420)
 - Fix bug where NQuadsWriter may omit graph names when the data was inserted via SPARQL Updates (CORE-421)
 - Fix bug parsing SPARQL Results JSON where data is in unexpected order (CORE-423)
 - Fix possible NPE when running updates with a custom query processor
 - Fix for Stardog 2.2 reasoning support

1.0.5
-----

Changed
- Bug Fixes
 - Fix a bug with Left Join producing incorrect results due to join linearization optimizations in some cases (CORE-406)
 - Fix a bug in substituting parameter values containing $ signs into SparqlParameterizedString instances (CORE-408)
 - Fix a corner case in evaluating CONSTRUCT queries with empty WHERE clause and concrete triples in template (CORE-407)
 - Fix overly strict SPARQL Results XML parsing (CORE-410)
 - Fix incorrect usage of Single.NaN and Double.NaN constants with equality operator (CORE-412)
 - Include location information in Illegal space in URIs error from NTriples tokeniser
 - Fix a bug with scheduling of sub-queries (CORE-416)
 - Fix a bug with GRAPH clauses being executed multiple times unecessarily (CORE-416)
- Dependencies
 - Upgrade VDS.Common to 1.3.0 (CORE-405)
 - Upgrade Json.Net to 6.0.3 (CORE-405)
- Build
 - Upgrade PCL build to Profile 136 (CORE-405)
- Parsing
 - Improve error message for excess triple pattern tokens (CORE-411)
- Query
 - Add FixedVariables and FloatingVariables properties to ISparqlAlgebra and related classes (CORE-406)
 - Improve logic for when Left Joins are linearized (CORE-406)
 - ExplainQueryProcessor improvements:
  - GRAPH clause explanations
  - Indentation of output for easier reading

Removed
- Builds
 - Remove SL4 and WP7 builds (CORE-405)

1.0.4
-----

Added
- Parsing
 - Support for updated NTriples syntax per the RDF 1.1 specification (CORE-355)